--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -31,8 +31,7 @@
 
     "background": {
         "service_worker": "background/background.js",
-        "type": "module",
-        "page": "background/background.html"
+        "type": "module"
     },
 
     "content_scripts": [
